107 Fix spacing in inline note with multiple children

--- a/app/assets/scss/components/_inline-note.scss
+++ b/app/assets/scss/components/_inline-note.scss
@@ -36,8 +36,6 @@
 }
 
 .inline-note__display {
-	display: flex;
-	align-items: center;
 	overflow: hidden;
 	p {
 		white-space: pre;
